--- a/styles/styleLoginRegister.css
+++ b/styles/styleLoginRegister.css
@@ -1,35 +1,54 @@
 form
 {
-  background-color: white;
-  border: 5px;
-  border-color: green;
-  border-style: solid;
+  background-color: #00CC66;
   position: relative;
   z-index: 1;
-  height: 50%;
   width: 50%;
-  left: 25%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: auto;
+  padding-bottom: auto;
 }
 
 input[type=text], input[type=password]
 {
-  width: 100%;
+  width: 95%;
+  margin-left: 15px;
   padding: 12px 20px;
-  margin: 8px 0;
+  margin-top: 8px;
+  margin-bottom: 8px;
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
 }
 
+select
+{
+  margin-left: 15px;
+  background-color: white;
+  border-style: solid;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+input[type=radio]
+{
+  margin-left: 15px;
+  margin-top: 10px;
+}
+
 button
 {
-  background-color: green;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: arial;
   color: white;
   padding: 14px 20px;
-  margin: 8px 0;
+  margin: 25px;
   border: none;
-  cursor: pointer;
-  width: 100%;
+  background: none;
+  margin: auto;
 }
 
 #fondo
@@ -55,14 +74,31 @@ button
   z-index: 0;
 }
 
+#datos
+{
+  margin-top: 15%;
+}
+
 #datos b
 {
-  margin-left: 5px; 
+  margin-left: 15px;
+  color: white;
+  font-family: Arial;
 }
 
 .logo
 {
+  color: white;
   font-family: arial;
   font-size: 40px;
   text-align: center;
+}
+
+.derechos
+{
+  text-align: center;
+  color: white;
+  font-family: Arial;
+  margin-bottom: 20px;
+  margin-top: 15%;
 }
