--- a/styles/styleApp.css
+++ b/styles/styleApp.css
@@ -1,3 +1,16 @@
+button
+{
+  border: none;
+  background-color: #00CC66;
+  padding: 8px;
+  color: white;
+}
+
+button:hover
+{
+  background-color: #00994C;
+}
+
 #textoImagen
 {
   float: left;
@@ -12,6 +25,27 @@
 {
   margin-left: 150px;
   margin-top: 125px;
+}
+
+.mainPedirDar
+{
+  margin-left: 50%;
+  margin-right: 50%;
+  margin-top: 120px;
+  width: 500px;
+  font-family: Arial;
+}
+
+.mainPedirDar input
+{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.mainPedirDar select
+{
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .main
@@ -174,4 +208,20 @@
 .sidebar a:hover
 {
   color: #00994C;
+}
+
+.footer {
+  bottom: 0;
+  position: fixed;
+  background-color: #E0E0E0;
+  margin-left: 240px;
+  width: 81%;
+  height: 30px;
+}
+
+.textoFooter
+{
+  text-align: center;
+  font-family: arial;
+  font-size: 10px;
 }
